--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Document</title>
+    <title>Image Viewer</title>
 </head>
 <body>
-    <p>My first home page</p>
-    
+  <div class="wrapper">
+
+    <div class="side">
+       <button id="buttonl">&#10094;</button>
+    </div>
+  
+    <img id="picture">
+    <div class="gray-container">
+      <h1 id="photo-title"></h1>
+      <p id="photo-description"></p>
+    </div>    
+  
+  <div class="side">
+    <button id="buttonr">&#10095;</button>
+  </div>    
+  </div>
+
+  <div class="thumbnails_container">
+    <!--img id="picturest"  src="./Images/100_0448.JPG"-->
+    <!--img id="picturest"  src="./Images/100_0474.JPG"-->
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+      integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
